<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background" >

    <LinearLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/lyTitleBar"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_gravity="top"
            android:background="@drawable/bg_lm_titlebar"
            android:gravity="center_vertical" >

            <ImageButton
                android:id="@+id/titleBtnLeft"
                android:layout_width="60dip"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_titlebar_noline_selector"
                android:gravity="center"
                android:src="@drawable/ic_sliding_menu" />

            <ImageView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_titlebar_logo" />
        </RelativeLayout>
    </LinearLayout>
    <!-- 筛选列表 -->

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_below="@id/titlebar"
        android:background="@drawable/bg_selection_bar_normal"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/discount_type_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_selection_selector" >

            <!-- android:background="@drawable/bg_selection_selector" -->

            <TextView
                android:id="@+id/discount_type_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/discount_type"
                android:textColor="@color/title_bar_select_color"
                android:textSize="15dip" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_selection_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="#335865" />

        <RelativeLayout
            android:id="@+id/departure_place_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_selection_selector" >

            <TextView
                android:id="@+id/departure_place_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/departure_place"
                android:textColor="@color/title_bar_select_color"
                android:textSize="15dip" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_selection_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="#335865" />

        <RelativeLayout
            android:id="@+id/destination_place_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_selection_selector" >

            <TextView
                android:id="@+id/destination_place_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/destination_place"
                android:textColor="@color/title_bar_select_color"
                android:textSize="15dip" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_selection_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="#335865" />

        <RelativeLayout
            android:id="@+id/travel_date_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_selection_selector" >

            <TextView
                android:id="@+id/travel_date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/travel_date"
                android:textColor="@color/title_bar_select_color"
                android:textSize="15dip" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_selection_arrow" />
        </RelativeLayout>
    </LinearLayout>
    <!-- 筛选列表 -->
    <!-- 广告控件 -->

    <LinearLayout
        android:id="@+id/billboard_layout"
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:layout_below="@id/filter_layout"
        android:orientation="horizontal" >

        <cn.lvyou.controls.Billboard
            android:id="@+id/billboard"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/black" />
    </LinearLayout>
    <!-- 广告控件 -->

</RelativeLayout>